--- a/styles.css
+++ b/styles.css
@@ -28,7 +28,7 @@ body {
 }
 
 .contact-info {
-    text-align: left; /* Align text to the left */
+    text-align: right; /* Align text to the left */
 }
 
 .section {
